(library
 (name llvm_executionengine)
 (public_name llvm.executionengine)
 (libraries llvm llvm.target ctypes.foreign)
 (foreign_stubs
  (language c)
  (names executionengine_ocaml)
  (extra_deps ../llvm/llvm_ocaml.h)
  (flags (:include ../c_flags.sexp)))
  (c_library_flags (:include ../c_library_flags.sexp)))
