(library
 (name llvm_passmgr_builder)
 (public_name llvm.passmgr_builder)
 (libraries llvm)
 (foreign_stubs
  (language c)
  (names passmgr_builder_ocaml)
  (extra_deps ../../llvm/llvm_ocaml.h))
 (c_library_flags (:include c_library_flags.sexp)))

(rule
 (targets c_library_flags.sexp)
 (action (run ../../discover.sh ipo)))
