(library
 (name llvm_scalar_opts)
 (public_name llvm.scalar_opts)
 (libraries llvm)
 (foreign_stubs
  (language c)
  (names scalar_opts_ocaml)
  (extra_deps ../../llvm/llvm_ocaml.h))
 (c_library_flags (:include c_library_flags.sexp)))

(rule
 (targets c_library_flags.sexp)
 (action (run ../../discover.sh scalaropts)))
