(library
 (name llvm_vectorize)
 (public_name llvm.vectorize)
 (libraries llvm)
 (foreign_stubs
  (language c)
  (names vectorize_ocaml)
  (extra_deps ../../llvm/llvm_ocaml.h))
 (c_library_flags (:include c_library_flags.sexp)))

(rule
 (targets c_library_flags.sexp)
 (action (run ../../discover.sh vectorize)))
